# Genrative_AI

./: .gitignore  Query_solver.py  README  README.md  docker-compose.db.yml  docker-compose.yml  ollama_api.py  requirements.txt  tokenization.py
AutoScraper/: scraped_output.jsonl
LLMParallelFanOut/: multi_llm_answers.py  multillm_results.json  optimize_final_answer.py  optimized_llm_final_answers.json  question_variants.py  questions.json
LangChain/: chain2.py  chain3.py  chain4_parallel.py  chain6_pydantic.py  learn1.py  learnfirebase.py
LangChain_up/: chain1.py  chain5_conditional.py  learn0.py  template_messages.py
LangGraph/: basic_react_agent.py
Lang_graph/: graph.py
Langfuse/: Weather_agent.py  docker-compose.langfuse.yml
Learning/: Groq.py  langchain.py  mathstoken.py  test_neo4j.py
MCP_Server/: mcp.json  pnpm-lock.yaml
MCP_Server/MY-MCP/: .env.example  INTEGRATION_GUIDE.md  QUICKSTART.md  TOOLS_README.md  main.py  pyproject.toml  requirements_new.txt
MCP_Server/MY-MCP/api/: main.py  mcp_client.py  test_tools.py
MCP_Server/MY-MCP/api/conversations/: conversation_2025-12-06_04-21-39.json  conversation_2025-12-06_04-22-19.json  conversation_2025-12-06_04-24-52.json  conversation_2025-12-06_04-27-16.json  conversation_2025-12-06_04-31-25.json  conversation_2025-12-06_04-32-12.json  conversation_2025-12-06_04-43-56.json
MCP_Server/MY-MCP/api/utils/: serper_tool.py  weather_tool.py
ParallelFanOut/: BigNote_ChunkingDB.py  ChunkingDB.py  ParallelRetrieval.py  RenamingDB.py  RetrieverChecker.py  SemanticRetrieval.py  ShortNote_ChunkingDB.py  (+1 more)
(+105 files in other folders)
