[project]
name = "my-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.123.9",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "mcp>=1.23.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "utils>=1.0.2",
    "uvicorn>=0.38.0",
]
